add startup message and update docs
